prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/var_scope_3.diag.txt
ERROR: Unknown variable [x]
testData/diagnostics/var_scope_3.nut:6:6

print(x)
      ^


